# iot_fullstack

./: README.md
sensor_data_collector/: CMakeLists.txt  sensor_data_collector.cpp
sensor_data_collector/ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306.h
